--- a/app/styles/searchSection.module.css
+++ b/app/styles/searchSection.module.css
@@ -1,9 +1,8 @@
 .main{
     position: relative;
     background: url("/food.jpg") no-repeat center/cover fixed; 
-    width: 100vw;
+    width: 100%;
     height: 90vh;
-    overflow-x: hidden;
 }
 
 .main .overlay{
@@ -21,4 +20,11 @@
 
 .main .overlay form input{
     padding: 6px 15px;
+}
+
+@media(max-width: 900px){
+    .main{
+        height: 65vh;
+    }
+    
 }
