--- a/app/styles/searchSection.module.css
+++ b/app/styles/searchSection.module.css
@@ -1,8 +1,14 @@
 .main{
     position: relative;
-    background: url("/food.jpg") no-repeat center/cover fixed; 
     width: 100%;
     height: 90vh;
+}
+
+.main .cover_image{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .main .overlay{
