--- a/app/upload/styles/upload.module.css
+++ b/app/upload/styles/upload.module.css
@@ -20,13 +20,15 @@
     width: 100px;
 }
 
-.form .thumbnail_image_placeholder{
-    padding: 5px;  
-    height: 100px; 
-    width: 100px; 
-    border-radius: 20px; 
+.form label{
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.form label img{
+    width: 120px;
+    height: 110px;
     object-fit: cover;
-    display: none;
     cursor: pointer;
 }
 
@@ -50,19 +52,12 @@
     height: 1em;
 }
 
-.form label img{
-    width: 70px;
-    height: 70px;
-    object-fit: cover;
-    cursor: pointer;
-}
-
 .form .selected_images_container{
     width: 300px;
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    grid-auto-rows: 110px;
+    grid-auto-rows: 130px;
     grid-auto-flow: dense;
 }
 
@@ -77,7 +72,7 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 .form .selected_images_container .selected_image svg{
