--- a/app/upload/styles/upload.module.css
+++ b/app/upload/styles/upload.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap: 15px;
+    padding-bottom: 15px;
 }
 
 .form input{
@@ -32,10 +33,14 @@
     cursor: pointer;
 }
 
-.form ol{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+.form label .extra_button{
+    width: 60px;
+    height: 60px;
+}
+
+.form .select{
+    padding: 8px 15px;
+    min-width: 150px;
 }
 
 .form button{
@@ -57,14 +62,13 @@
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    grid-auto-rows: 130px;
+    grid-auto-rows: 110px;
     grid-auto-flow: dense;
 }
 
 .form .selected_images_container .selected_image{
     position: relative;
     transition: all 0.8s;
-    background: url("/placeholder.png") no-repeat center/cover;
 }
 
 .form .selected_images_container .selected_image img{
