--- a/app/upload/styles/upload.module.css
+++ b/app/upload/styles/upload.module.css
@@ -3,11 +3,11 @@
     flex-direction: column;
     align-items: center;
     gap: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 30px;
 }
 
 .form input{
-    width: 200px;
+    width: 180px;
     padding: 5px 10px;
 }
 
@@ -39,8 +39,19 @@
 }
 
 .form .select{
-    padding: 8px 15px;
-    min-width: 150px;
+    padding: 5px 10px;
+    min-width: 180px; 
+}
+
+.form .pricing{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+
+.form .pricing input{
+    width: 70px;
 }
 
 .form button{
