--- a/app/food/[slug]/components/styles/firstSection.module.css
+++ b/app/food/[slug]/components/styles/firstSection.module.css
@@ -15,6 +15,7 @@
     width: 70vw;
     left: 0;
     display: flex;
+    transition: all 0.7s;
 }
 
 .first_section .first .slider img{
@@ -60,7 +61,7 @@
 .first_section .extra_info .additional_images{
     display: grid;
     gap: 1px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     grid-auto-rows: 200px;
     grid-auto-flow: dense;
     padding: 1px 0 15px 0;
