--- a/app/food/[slug]/components/styles/secondSection.module.css
+++ b/app/food/[slug]/components/styles/secondSection.module.css
@@ -1,14 +1,14 @@
 .second_section{
-    flex: 3;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0 25px;
-    gap: 15px;
+    gap: 25px;
+    margin-top: 20px;
 }
 
 .second_section div input{
-    width: 100px;
+    width: 70px;
     padding: 5px 10px;
     text-align: center;
 }
@@ -19,13 +19,11 @@
     cursor: pointer;
 }
 
-.price{
-    font-weight: bold;
+.second_section .order_button{
+    width: 200px;
+    padding: 8px 0;
 }
 
-@media(max-width: 800px){
-    .second_section{
-        flex: 1;
-        margin: 15px;
-    }
+.price{
+    font-weight: bold;
 }
