--- a/app/food/[slug]/food.module.css
+++ b/app/food/[slug]/food.module.css
@@ -1,10 +1,7 @@
 .main{
     display: flex;
-    padding-bottom: 15px;
-}
-
-@media(max-width: 800px){
-    .main{
-        flex-direction: column;
-    }
+    flex-direction: column;
+    padding-bottom: 35px;
+    justify-content: center;
+    align-items: center;
 }
