--- a/app/search/[slug]/styles/filterOptionsSection.module.css
+++ b/app/search/[slug]/styles/filterOptionsSection.module.css
@@ -36,6 +36,9 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+}
+
+.filter_options_section form .show_border{
     border: solid 1px black;
 }
 
