--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -67,11 +67,48 @@
     cursor: pointer;
 }
 
-.nav .profile_tab_container{
+.nav .signed_in_options{
+    flex-basis: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+.nav .signed_in_options a{
+    position: relative;
+    border: none;
+    text-decoration: none;
+}
+
+.nav .signed_in_options a:hover{
+    background: transparent;
+}
+
+/* .nav .signed_in_options a:hover svg{
+    color: white;
+} */
+
+.nav .signed_in_options a p{
+    color: white;
+    background: rgba(0,0,0,0.5);
+    padding: 5px;
+    border-radius: 100%;
+    position: absolute;
+    right: -15px;
+    top: -15px;
+}
+
+.nav .signed_in_options svg{
+    width: 35px;
+    height: 35px;
+}
+
+.nav .signed_in_options .profile_tab_container{
     position: relative;
 }
 
-.nav .profile_tab_container .image_container{
+.nav .signed_in_options .profile_tab_container .image_container{
     width: 40px;
     height: 40px;
     position: relative;
@@ -80,13 +117,13 @@
     cursor: pointer;
 }
 
-.nav .profile_tab_container .image_container img{
+.nav .signed_in_options .profile_tab_container .image_container img{
     position: absolute;
     width: 100%;
     height: 100%;
 }
 
-.nav .profile_tab_container .profile_options{
+.nav .signed_in_options .profile_tab_container .profile_options{
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -97,25 +134,25 @@
     justify-content: center;
 }
 
-.nav .profile_tab_container .profile_options .option{
+.nav .signed_in_options .profile_tab_container .profile_options .option{
     position: relative;
 }
 
-.nav .profile_tab_container .profile_options .option p{
+.nav .signed_in_options .profile_tab_container .profile_options .option p{
     position: absolute;
     right: 0;
     width: 90px;
     z-index: -1;
 }
 
-.nav .profile_tab_container .profile_options .option svg{
+.nav .signed_in_options .profile_tab_container .profile_options .option svg{
     width: 20px;
     height: 20px;
     cursor: pointer;
     transition: color 0.3s ease-in;
 }
 
-.nav .profile_tab_container .profile_options .option svg:hover{
+.nav .signed_in_options .profile_tab_container .profile_options .option svg:hover{
     color: dodgerblue;
 }
 
