--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -85,14 +85,10 @@
     background: transparent;
 }
 
-/* .nav .signed_in_options a:hover svg{
-    color: white;
-} */
-
 .nav .signed_in_options a p{
     color: white;
     background: rgba(0,0,0,0.5);
-    padding: 5px;
+    padding: 5px 10px;
     border-radius: 100%;
     position: absolute;
     right: -15px;
