--- a/app/food/[slug]/components/styles/firstSection.module.css
+++ b/app/food/[slug]/components/styles/firstSection.module.css
@@ -78,6 +78,148 @@
     opacity: 0.6;
 }
 
+.chat_and_ai_button_container{
+    position: sticky;
+    bottom: 5px;
+    right: 10px;
+    margin-left: auto;
+    z-index: 20000;
+}
+
+.ai_button_container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.ai_button_container p{
+    position: absolute;
+    right: 80px;
+    color: white;
+    background: rgba(0,0,0,0.7);
+    padding: 5px 10px;
+    transition: all 0.5s;
+    display: none;
+} 
+
+.ai_button_container:hover p{
+    display: block;
+}
+
+.ai_chat_button{
+    position: relative;
+    width: 75px;
+    height: 75px;
+    border-radius: 100%;
+    border: #cccccc87 solid 2px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.ai_chat_button:hover{
+    background: rgba(0,0,0,0.3);
+}
+
+.ai_chat_button img{
+    position: absolute;
+    padding: 7px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Questions Section */
+.questionSection{
+    /* position: absolute; */
+    right: 10px;
+    margin-left: auto;
+	min-width: 300px;
+	border: 1px solid #ddd;
+	box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+	border-radius: 2px;
+    z-index: 20000;
+    background-color: white;
+}
+
+.questionSection h2{
+    font-size: 18px;
+    padding: 10px 20px;
+    color: #575ed8;
+}
+
+.questionSection .message_content_section{
+	display: flex;
+	min-height: 78vh;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+
+.questionSection .message_content_section .chat_window{
+    flex: 9;
+    overflow: auto;
+    background: #f9f9f9;
+}
+
+.output .profile_container{
+    display: flex;
+    align-items: center;
+    gap: 1px;
+    padding: 14px 0px;
+    margin: 0 20px;
+    border-bottom: 1px solid #e9e9e9;
+    color: #555;
+}
+
+.output .profile_pic{
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+    background: url("/logo2.png") no-repeat center/cover;
+}
+
+.output .profile_pic2{
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+    background: url("/placeholder.png") no-repeat center/cover;
+}
+
+.message_compose_section{
+    display: flex;
+    flex-direction: column;
+	flex: 1;
+    gap: 2px;
+}
+
+.message{
+    flex: 1;
+    padding: 5px 10px;
+    box-sizing: border-box;
+    background: #eee;
+    border: 0;
+    display: block;
+    width: 100%;
+    background: #fff;
+    border-bottom: 1px solid #eee;
+    font-family: Nunito;
+    font-size: 16px;
+}
+
+.send{
+    flex: 1;
+    background: #575ed8;
+    color: #fff;
+    font-size: 18px;
+    border: 0;
+    cursor: pointer;
+    padding: 5px 0;
+    width: 100%;
+    border-radius: 0 0 2px 2px;
+}
+
 @media(max-width: 800px){
     .first_section .first{
         width: 100vw;
