--- a/app/food/[slug]/components/styles/firstSection.module.css
+++ b/app/food/[slug]/components/styles/firstSection.module.css
@@ -97,6 +97,8 @@
 .ai_button_container p{
     position: absolute;
     right: 80px;
+    width: 80px;
+    text-align: center;
     color: white;
     background: rgba(0,0,0,0.7);
     padding: 5px 10px;
@@ -132,8 +134,9 @@
 
 /* Questions Section */
 .questionSection{
-    /* position: absolute; */
-    right: 10px;
+    position: absolute;
+    right: 2px;
+    bottom: 85px;
     margin-left: auto;
 	min-width: 300px;
 	border: 1px solid #ddd;
@@ -141,6 +144,7 @@
 	border-radius: 2px;
     z-index: 20000;
     background-color: white;
+    display: none;
 }
 
 .questionSection h2{
@@ -183,8 +187,15 @@
 .output .profile_pic2{
     width: 35px;
     height: 35px;
+    position: relative;
     border-radius: 100%;
-    background: url("/placeholder.png") no-repeat center/cover;
+    overflow: hidden;
+}
+
+.output .profile_pic2 img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .message_compose_section{
